--- a/templates/index_new.html
+++ b/templates/index_new.html
@@ -36,14 +36,14 @@
         </button>
         <a class="navbar-brand" href="/" title="">
           <img src="./static/assets/images/mashup-icon.svg" class="navbar-logo-img" alt="">
-          Mashup Template
+          Pandava
         </a>
       </div>
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/" title="">Home</a></li>
-          <li><a href="project.html" title="">Project</a></li>
+          <li><a href="/" title="">Inicio</a></li>
+          <li><a href="project.html" title="">Projetos</a></li>
           <li>
             <p>
               <a href="components.html" class="btn btn-default navbar-btn" title="">Components</a>
@@ -61,8 +61,8 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <h1>Mountain</h1>
-          <p>WELCOME TO MOUNTAIN WEBSITE. AGENCY IN BERLIN.</p>
+          <h1>Minha Linda</h1>
+          <p>Primeiro site que coloco no ar.</p>
           <br>
           <a href="project.html" class="btn btn-default btn-lg" title="">Discover</a>
         </div>
